refactor: api endpoints
